avoid pagebreak inside

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 @media print {
   html, body {
       height: 100%;
+      page-break-inside: avoid;
   }
 }
 
